--- a/Lab5/3dGrpahics.html
+++ b/Lab5/3dGrpahics.html
@@ -14,7 +14,7 @@
     <script type="text/javascript">
 
         class Sphere {
-            constructor(radius, segmentWidth, segmentHeight, wireframeOn,velocityX,box) {
+            constructor(radius, segmentWidth, segmentHeight, wireframeOn, velocityX, box) {
                 this.radius = radius;
                 this.segmentWidth = segmentWidth;
                 this.segmentHeight = segmentHeight;
@@ -30,7 +30,7 @@
                 //Code to rotate sphere
                 this.sphere.rotation.x += 0.01;
                 this.sphere.rotation.y += 0.01;
-               
+
 
                 //move the sphere in the x-axis
                 this.sphere.position.x += this.velocityX;
@@ -46,36 +46,59 @@
             }
         }
         class box {
-            constructor(height,width,depth,wireframeOn) {
+            constructor(height, width, depth, wireframeOn) {
                 this.height = height;
                 this.width = width;
                 this.depth = depth;
                 this.wireframeOn = wireframeOn;
                 this.geometry = new THREE.BoxGeometry(this.width, this.height, this.depth);
-                this.material = new THREE.MeshBasicMaterial({ color: 0x00ff00, wireframe: this.wireframeOn });
+                this.material = new THREE.MeshLambertMaterial({ color: 0x00ff00, wireframe: this.wireframeOn });
                 this.cube = new THREE.Mesh(this.geometry, this.material);
                 scene.add(this.cube);
             }
         }
-        // Implement scene - Create a Three.js scene to hold objects.
+        class plane {
+            constructor(width,height,box) {
+                this.box = box;
+                this.width = width;
+                this.height = height;
+                this.geometry = new THREE.PlaneGeometry(this.width, this.height);
+                this.material = new THREE.MeshLambertMaterial({ color: 0xffff00, side: THREE.DoubleSide });
+                this.plane = new THREE.Mesh(this.geometry, this.material);
+
+                //ensure plane is at the bottom of the cube
+                this.plane.position.set(0,((this.box.width/2-1)*-1),0);//plane appear slightly above the bottom of the cube
+                this.plane.rotation.x = Math.PI / 2; //rotate 90 degrees from its default position to lay flat
+                scene.add(this.plane);
+            }
+        }
+        //implement scene - Create a Three.js scene to hold objects.
         var scene = new THREE.Scene();
         // Create a camera with specified properties.
-        var camera = new THREE.PerspectiveCamera(76, window.innerWidth / window.innerHeight, 0.1, 1000);
+        var camera = new THREE.PerspectiveCamera(80, window.innerWidth / window.innerHeight, 0.1, 1000);
         // Set camera position
         camera.position.z = 80;
-        // Implement renderer - Create a WebGL renderer for rendering the scene.
+        //implement renderer - Create a WebGL renderer for rendering the scene.
         var renderer = new THREE.WebGLRenderer();
         renderer.setSize(window.innerWidth, window.innerHeight);
+        renderer.shadowMap.enabled = true;
+        renderer.shadowMap.type = THREE.PCFSoftShadowMap; //to antialias the shadow
         document.body.appendChild(renderer.domElement);
         //spotlight added
         var spotLight = new THREE.SpotLight(0xffffff);
-        spotLight.position.set(50, 50, 50);
+        spotLight.position.set(20, 20, 20);
+        spotLight.castShadow = true;
         scene.add(spotLight);
+        //Helper for directional light
+        var helper = new THREE.CameraHelper(spotLight.shadow.camera);
+        scene.add(helper);
         //cube added
-        myCube = new box(100,100,100,true);
+        myCube = new box(50, 50, 50, true);
         //sphere added
-        mySphere = new Sphere(15, 32, 16, false,1,myCube);
-        mySphere2 = new Sphere(18, 35, 17, true,1,myCube);
+        mySphere = new Sphere(15, 32, 16, false, 1, myCube);
+        mySphere2 = new Sphere(18, 35, 17, true, 1, myCube);
+        //plane added
+        myPlane = new plane(50,50,myCube);
         //repeatme
         var repeatme = function () {
             //renderer
