--- a/Lab5/3dGrpahics.html
+++ b/Lab5/3dGrpahics.html
@@ -92,8 +92,10 @@
                         //REverse direction
                         this.velocityY = -this.velocityY; 
                         this.velocityX = -this.velocityX;
+                        this.velocityZ = -this.velocityZ;
                         otherBall.velocityY = -otherBall.velocityY; 
                         otherBall.velocityX = -otherBall.velocityX;
+                        otherBall.velocityZ = -otherBall.velocityZ; 
                         console.log("Spheres colided");
                     }
                 }
